<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BasicKotlin</string>

    <!-- MH's strings-->
    <string name="mh_presentation">Presentation</string>
    <string name="mh_calculator">Calculator</string>
    <string name="mh_recycler_card_view">Recycler&amp;Card View</string>
    <string name="mh_hint_name">*Nombre(s)</string>
    <string name="mh_hint_surname">Apellidos</string>
    <string name="mh_hint_birthday">*Fecha Nacimiento</string>
    <string name="mh_hint_age">Edad</string>
    <string name="mh_hint_phone">*Número</string>
    <string name="mh_hint_state">Estado de Nacimiento</string>
    <string name="mh_hint_gender">Sexo</string>
    <string name="mh_save">Guardar</string>

    <string name="mh_menu_delete">Delete</string>
    <string name="mh_menu_edit">Editar</string>
    <string name="mh_menu_share">Compartir</string>
    <string name="mh_menu_search">Buscar</string>

    <!-- PA's strings-->
    <string name="pa_calculator">Calculator</string>
    <string name="pa_data">Data</string>
    <string name="pa_recycler_view">Recycler and Card view</string>
    <string name="name">Name:</string>
    <string name="pa_hint_name">Nombre(s)*:</string>
    <string name="pa_hint_surname">Apellidos</string>
    <string name="pa_hint_age">Edad</string>
    <string name="pa_hint_birthday">Fecha de nacimiento</string>
    <string name="pa_hint_phone">Numero</string>
    <string name="pa_hint_state">Estado</string>
    <string name="pa_hint_sex">Sexo</string>


    <!-- Number -->
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="igual">=</string>
    <string name="C">C</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="divicion">/</string>
    <string name="multiplicacion">X</string>

    <!-- Name: Manuel Hidalgo - Age: 27-->
    <!-- &lt; = < -->
    <!-- &gt; = > -->
    <string name="full_name">
        &lt;b&gt;Name:&lt;/b&gt; <xliff:g name="name">%s</xliff:g> <xliff:g name="surname">%s</xliff:g>&lt;br&gt;
        &lt;b&gt;Edad:&lt;/b&gt; <xliff:g name="age">%d</xliff:g>&lt;br&gt;
        &lt;b&gt;School:&lt;/b&gt; <xliff:g name="school">%s</xliff:g>&lt;br&gt;
        &lt;b&gt;State:&lt;/b&gt; <xliff:g name="state">%s</xliff:g>&lt;br&gt;
        &lt;b&gt;Work:&lt;/b&gt; <xliff:g name="work">%s</xliff:g>
    </string>

    <string name="html">Hola <b>Manuel Hidalgo</b></string>

    <!-- Names -->
    <string name="name_manuel">Manuel</string>
    <string name="name_josue">Josue</string>
    <string name="name_juan">Juan</string>
    <string name="name_antonio">Antonio</string>
    <string name="name_angel">Angel</string>
    <string name="name_pablo">Pablo</string>


    <!-- Calculator -->
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="by">x</string>
    <string name="split">/</string>
    <string name="equals">=</string>
    <string name="nine_number">9</string>
    <string name="eight_number">8</string>
    <string name="seven_number">7</string>
    <string name="six_number">6</string>
    <string name="five_number">5</string>
    <string name="four_number">4</string>
    <string name="three_number">3</string>
    <string name="two_number">2</string>
    <string name="one_number">1</string>
    <string name="zero_number">0</string>
    <string name="delete">D</string>
    <string name="clear">C</string>

    <string name="auto_result">Auto-Result</string>

    <!--Basic math operations-->
    <string name="operation_addition">+</string>
    <string name="operation_subtraction">-</string>
    <string name="operation_multiplication">x</string>
    <string name="operation_division">/</string>

    <!--numbers-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--AB's Strigns-->
    <string name="FrgCalculator">Calculadora</string>
    <string name="ab_hint_name">*Nombre(s)</string>
    <string name="ab_hint_age">*Edad</string>
    <string name="ab_hint_state">Estado</string>
    <string name="ab_hint_surname">Apellidos(s)</string>
    <string name="ab_hint_work">*Trabajo</string>
    <string name="ab_hint_school">*Escuela</string>

    <!--JOSUE´s STRINGS-->
    <string name="jc_firstproyect">Proyecto Inicial</string>
    <string name="jc_secondproyect">Calculadora</string>
    <string name="jc_thirdproyect">RecyclerView</string>
    <string name="jc_name">Name</string>
    <string name="jc_name_welcome">Nombre</string>
    <string name="jc_surname">Apellido</string>
    <string name="jc_age">Edad</string>
    <string name="jc_fecnac">Fecha Nacimiento</string>
    <string name="jc_num">Numero</string>
    <string name="jc_state">Estado</string>
    <string name="jc_gender">Genero</string>
    <string name="jc_save">Guardar</string>

    <!-- messages frgPabloCalculator-->
    <string name="frgPabloCalculatorNumber">No se pueden ingresar mas de 3 numeros</string>
    <!-- Juan strings -->
    <string name="jp_hint_name">Nombre</string>
    <string name="jp_hint_surname">Apellido</string>
    <string name="jp_hint_age">Edad</string>
    <string name="jp_hint_date">Fecha Nacimiento</string>
    <string name="jp_hint_sex">Genero</string>
    <string name="jp_hint_school">Escuela</string>
    <string name="jp_hint_Number">Numero</string>
    <string name="jp_hint_work">Trabajo</string>
    <string name="jp_hint_state">Ciudad</string>

    <string name="jp_hint_delete">Delete</string>
    <string name="jp_hint_share">Share</string>
    <string name="jp_hint_edit">Edit</string>


    <!--AngelStrings -->
    <string name="an_hint_name">Name</string>
    <string name="an_hint_surname">Surname</string>
    <string name="an_hint_age">Age</string>
    <string name="an__hint_number">Number</string>
    <string name="an_hint_state">State</string>
    <string name="an_hint_birthday">Birthday</string>
    <string name="an_hint_sexo">Sexo</string>

    <string name="an_save">Save</string>





</resources>