<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pablo.activity.ActPabloMain">

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput"
        tools:text="@string/name_pablo" />

    <LinearLayout
        android:id="@+id/lyOperation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult">

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/operation_addition" />

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/operation_subtraction" />

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/operation_multiplication" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/operation_division" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumber1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyOperation">

        <Button
            android:id="@+id/btnNumber7"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_seven" />

        <Button
            android:id="@+id/btnNumber8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_eight" />

        <Button
            android:id="@+id/btnNumber9"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_nine" />

        <Button
            android:id="@+id/btnErase"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumber2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyNumber1">

        <Button
            android:id="@+id/btnNumber4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_four" />

        <Button
            android:id="@+id/btnNumber5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_five" />

        <Button
            android:id="@+id/btnNumber6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_six" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumber3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyNumber2">

        <Button
            android:id="@+id/btnNumber1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_one" />

        <Button
            android:id="@+id/btnNumber2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_two" />

        <Button
            android:id="@+id/btnNumber3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_three" />

        <Button
            android:id="@+id/btnNumber0"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:text="@string/number_zero" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="359dp"
        android:layout_height="69dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/equals"
        app:layout_constraintTop_toBottomOf="@id/lyNumber3"
        tools:layout_editor_absoluteX="25dp" />


</androidx.constraintlayout.widget.ConstraintLayout>