<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mh_primary"
    android:padding="14dp"
    tools:context="com.mh.basickotlin.manuel.view.activity.ActManuelCalculator">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_mh_corner"
        android:importantForAutofill="no"
        android:padding="14dp"
        android:textAlignment="textEnd"
        android:textColor="@color/mh_primary"
        android:textSize="42sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5x5" />

    <CheckBox
        android:id="@+id/cbAutoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_result"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textColor="@color/mh_secondary"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperation"
        tools:text="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_seven"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMul"
                style="@style/Theme_BackgroundButtonOperatorManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/multiplicacion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_four"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDiv"
                style="@style/Theme_BackgroundButtonOperatorManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/operation_division" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_one"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                style="@style/Theme_BackgroundButtonOperatorManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/operation_addition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/clear"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/number_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDel"
                style="@style/Theme_BackgroundButtonManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/delete" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRes"
                style="@style/Theme_BackgroundButtonOperatorManuel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/operation_subtraction" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEquals"
            style="@style/Theme_BackgroundButtonManuel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/equals"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>