<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pablo.view.fragment.FrgPabloContent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btPabloData"
        style="@style/Theme_BackgroundButtonPablo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pa_data" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btPabloCalculator"
        style="@style/Theme_BackgroundButtonPablo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pa_calculator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btPabloRecyclerView"
        style="@style/Theme_BackgroundButtonPablo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pa_recycler_view" />
</LinearLayout>